# football

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt
data/: football.db
data/cache/: api_usage.json  coachs_team40.json  coachs_team85.json  fixtures_date2026-04-07.json  fixtures_date2026-04-07_league135_season2025.json  fixtures_date2026-04-07_league140_season2025.json  fixtures_date2026-04-07_league169_season2026.json  fixtures_date2026-04-07_league2_season2025.json  fixtures_date2026-04-07_league39_season2025.json  fixtures_date2026-04-07_league61_season2025.json  fixtures_date2026-04-07_league78_season2025.json  fixtures_date2026-04-08_league135_season2025.json  fixtures_date2026-04-08_league140_season2025.json  fixtures_date2026-04-08_league39_season2025.json  fixtures_date2026-04-08_league61_season2025.json  fixtures_date2026-04-08_league78_season2025.json  fixtures_from2025-10-10_statusFT_team40_to2026-04-08.json  fixtures_from2025-10-10_statusFT_team4234_to2026-04-08.json  fixtures_from2025-10-10_statusFT_team529_to2026-04-08.json  fixtures_from2025-10-10_statusFT_team85_to2026-04-08.json  fixtures_headtohead_h2h1-2.json  fixtures_headtohead_h2h157-541.json  fixtures_headtohead_h2h157-541_last10.json  fixtures_headtohead_h2h85-40.json  fixtures_id1534909.json  fixtures_last5_team1.json  fixtures_last5_team2.json  injuries_fixture1534909.json  teams_searchBayern.json  (+22 more)
scripts/: cron_example.py  daily_prediction.py  evaluate_accuracy.py  predict_fixture.py  setup_db.py  today.py
src/: __init__.py  config.py  logger.py
(+16 files in other folders)
